--- a/ssr-react/package.json
+++ b/ssr-react/package.json
@@ -24,6 +24,7 @@
     "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3",
     "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1"
   }
