--- a/ssr-react/package.json
+++ b/ssr-react/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-server": "babel src --out-dir dist-server --config-file ./.babelrc.server.js",
-    "build": "npm run build-server && webpack",
-    "start": "node dist-server/server.js"
+    "build": "webpack",
+    "start": "node dist/server.bundle.js"
   },
   "keywords": [],
   "author": "",
@@ -21,11 +21,13 @@
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3",
     "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
